@@ -1,3 +1,9 @@
+19 January 2009: Matthijs
+	- Bug 230: nsd-*: use stdout for non-error output (instead of stderr).
+
+17 January 2009: Jelte
+	- Fix file rotation when no logfile but chroot.
+
 8 January 2009: Matthijs
 	- New nsd-patch option -o dbfile (set output.db)
 	- update nsdc to deal with the new nsd-patch options
@@ -27,7 +33,7 @@
 
 7 November 2008: Matthijs
 	- Bugfix: don't fclose if logfile == NULL.
-
+	
 30 October 2008: Matthijs
 	- Allow escape characters in literal dnames
 	- Fix typo in zonec manpage
